@@ -24,12 +24,14 @@ namespace :test do
   Rake::TestTask.new(:units) do |t|
     t.pattern = 'test/unit/**/*_test.rb'
     t.ruby_opts << '-rubygems'
+    t.libs << 'test'
     t.verbose = true
   end
 
   Rake::TestTask.new(:remote) do |t|
     t.pattern = 'test/remote/*_test.rb'
     t.ruby_opts << '-rubygems'
+    t.libs << 'test'
     t.verbose = true
   end
 end
